@@ -186,7 +186,7 @@ if (in_array($clean_op,$valid_op,true)){
 		break;
 
 	default:
-		if($real_uid){
+		if($real_uid && $real_uid == $uid){
 			$tribesObj = $profile_tribes_handler->get($clean_tribes_id);
 			edittribes($tribesObj, true);
 		}
